# evaluation-juillet-2024

./: .gitignore  .~lock.Timesheet-evaluation.xlsx#  Cargo.toml  README.md  Timesheet-evaluation.xlsx  build.rs  diesel.toml  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
app/lib/: ROUTES.ts  generateTokenHandler.server.ts  generateTokenHandler.ts  rpc_client.context.ts
app/lib/admin/: token.client.ts  token.key.ts  token.server.ts
app/lib/client/: token.client.ts  token.key.ts  token.server.ts
app/lib/proprio/: token.client.ts  token.key.ts  token.server.ts
app/lib/protos/: admin.client.ts  admin.ts  client.client.ts  client.ts  proprietaire.client.ts  proprietaire.ts
app/lib/server/: protoclients.ts
app/routes/: +layout.svelte  +page.server.ts
app/routes/admin/(logged)/: +layout.server.ts  +layout.svelte
app/routes/admin/(logged)/imports/: +page.svelte
app/routes/admin/reset/: +page.server.ts
app/routes/client/(logged)/: +layout.server.ts  +layout.svelte
app/routes/proprio/(logged)/: +layout.server.ts  +layout.svelte
crates/diesel-schemas/: Cargo.toml
crates/diesel-schemas/src/: lib.rs  schema.rs  tables.rs  views.rs
crates/mada-immo-admin-tonic/: Cargo.toml
crates/mada-immo-admin-tonic/src/proto/: admin.rs
crates/mada-immo-client-tonic/: Cargo.toml
crates/mada-immo-client-tonic/src/proto/: client.rs
crates/mada-immo-csv-import/: Cargo.toml
crates/mada-immo-csv-import/src/: bien.rs  commission.rs  lib.rs  location.rs
crates/mada-immo-csv-import/src/bien/: models.rs  utils.rs
crates/mada-immo-csv-import/src/commission/: models.rs
crates/mada-immo-csv-import/src/location/: generate_speculative.rs  models.rs
crates/mada-immo-proprio-tonic/: Cargo.toml
crates/mada-immo-proprio-tonic/src/: proto.rs
crates/mada-immo-proprio-tonic/src/proto/: prorietaire.rs
crates/mada-immo-utils/: Cargo.toml
crates/mada-immo-utils/src/: get_date_fin_from_nb_mois.rs  get_liste_first_month_between_two_dates.rs  lib.rs
data/: Donnees-csv-saison3 - Biens.csv  Donnees-csv-saison3 - Commission.csv  Donnees-csv-saison3 - Location.csv  Resultat-Donnees-csv-import-2juillet-saison3 - Biens.csv  Resultat-Donnees-csv-import-2juillet-saison3 - Commission.csv  Resultat-Donnees-csv-import-2juillet-saison3 - Location.csv
looping/: MCD.lo1  MCD.loo
migrations/2024-06-30-075410_create_region/: down.sql  up.sql
migrations/2024-06-30-080706_create_proprietaire/: down.sql  up.sql
migrations/2024-06-30-081241_create_type_bien/: down.sql  up.sql
migrations/2024-06-30-083635_create_type_bien_commission/: down.sql  up.sql
migrations/2024-06-30-085733_create_v_type_bien_commission/: down.sql  up.sql
migrations/2024-06-30-130014_create_v_type_bien/: down.sql  up.sql
migrations/2024-06-30-134208_create_bien/: down.sql  up.sql
migrations/2024-06-30-140012_create_bien_loyer/: down.sql  up.sql
migrations/2024-06-30-141316_create_v_bien_loyer_recent/: down.sql  up.sql
migrations/2024-06-30-142624_create_v_bien/: down.sql  up.sql
migrations/2024-06-30-150544_create_client/: down.sql  up.sql
migrations/2024-06-30-151008_create_location/: down.sql  up.sql
migrations/2024-06-30-153303_create_v_location_recent/: down.sql  up.sql
migrations/2024-06-30-154202_create_v_bien_non_loue/: down.sql  up.sql
migrations/2024-06-30-155622_create_v_bien_loue/: down.sql  up.sql
migrations/2024-06-30-161945_create_payement/: down.sql  up.sql
migrations/2024-06-30-183839_create_v_payement_grouped/: down.sql  up.sql
migrations/2024-06-30-185154_create_v_payement_grouped_extended/: down.sql  up.sql
migrations/2024-07-02-054501_create_location_speculative/: down.sql  up.sql
migrations/2024-07-02-070419_create_v_location_bien/: down.sql  up.sql
proto/: admin.proto  client.proto  proprietaire.proto
sandbox/sql/: get_nombre_month_from_dates.sql
src/: error.rs  lib.rs  paginate.rs  servers.rs  token.rs
src/servers/: admin.rs  client.rs  proprio.rs
src/servers/admin/: auth.rs  comptes.rs  database.rs  imports.rs  location.rs
src/servers/client/: auth.rs  location.rs  payement.rs
src/servers/proprio/: auth.rs  biens.rs  comptes.rs
