[package]
name = "evaluation-juillet-2024"
version = "0.1.0"
edition = "2021"
exclude = ["/app", "/node_modules"]
default-run = "evaluation-juillet-2024"
resolver = "2"

[dependencies]
diesel.workspace = true
dotenvy = "0.15"
uuid = { workspace = true }
jwt = "0.16"
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true
hmac = "0.12"
sha2 = "0.10"
time.workspace = true
bigdecimal = { workspace = true, features = ["serde"] }
regex.workspace = true
rand = "0.8"
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
convert_case = "0.6"
tonic.workspace = true
prost.workspace = true
diesel-schemas = { path = "./crates/diesel-schemas" }

[build-dependencies]
tonic-build = { version = "0.11" }

[workspace]
members = ["crates/diesel-schemas"]

[workspace.dependencies]
tonic = { version = "0.11" }
prost = { version = "0.12" }
diesel = { version = "2", features = [
    "postgres",
    "r2d2",
    "uuid",
    "time",
    "numeric",
] }
csv = "1"
tokio = { version = "1" }
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = "2"
bigdecimal = { version = "0.4" }
uuid = "1"
time = { version = "0.3", features = [
    "serde",
    "macros",
    "serde-human-readable",
] }
thiserror = "1"
anyhow = "1"
regex = "1.10"
