[package]
name = "mada-immo-csv-import"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel.workspace = true
csv.workspace = true
diesel-schemas = { workspace = true }
serde.workspace = true
uuid.workspace = true
time = { workspace = true, features = ["formatting", "parsing"] }
bigdecimal = { workspace = true, features = ["serde"] }
thiserror.workspace = true
mada-immo-utils = { workspace = true }

[dev-dependencies]
dotenvy.workspace = true
